# fsquery

./: .gitignore  FSQuery.cabal  LICENSE  Main.hs  README  README.md  TODO  _load.hs
FSQuery/: Data.hs  Eval.hs  FileMeta.hs  Parser.hs  UnitConvert.hs
FSSQL/: Data.hs  Eval.hs  FileMeta.hs  Parser.hs  UnitConvert.hs
src/: Main.hs
src/System/FSQuery/: Data.hs  Eval.hs  FileMeta.hs  Parser.hs  UnitConvert.hs  Util.hs
