name:                FSQuery
version:             0.1.2.0
synopsis:            Query file system with a SQL-like interface.
description:         FSQuery allows you to find files by using a SQL-like language, think it as a GNU find alternative.
license:             MIT
license-file:        LICENSE
author:              Incomplete
maintainer:          incomplete@aixon.co
stability:           Provisional
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable FSQuery
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, old-locale >=1.0 && <1.1, time >=1.4 && <1.5, parsec >=3.1 && <3.2, QuickCheck >=2.6 && <2.7, directory >=1.2 && <1.3, filepath >=1.3 && <1.4, MissingH >=1.3 && <1.4, unix-compat >=0.4 && <0.5, regex-tdfa >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
